--- a/SVL/January/adaboost-Q.ipynb
+++ b/SVL/January/adaboost-Q.ipynb
@@ -25,7 +25,7 @@
     "import sklearn.datasets\n",
     "import matplotlib\n",
     "\n",
-    "# Display plots inlinee\n",
+    "# Display plots inlineee\n",
     "%matplotlib inline"
    ]
   },
