--- a/SVL/November/E03-NaiveBayes-jupyter/Bayes-Learning-S.ipynb
+++ b/SVL/November/E03-NaiveBayes-jupyter/Bayes-Learning-S.ipynb
@@ -25,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,7 +66,11 @@
     "\n",
     "Now the calculations are straight-forward. The terms $P[X_i | C]$ can be estimated by calculating the relative frequency of word $i$ per class $c$, resulting in a table of $p \\cdot M$ conditional probabilities. And finally, we can make predictions by calculating:\n",
     "\n",
-    "$$h(\\mathbf{x}) = \\mathit{argmax}_{c \\in \\{1, 2, \\dots, M\\}} P[C] \\cdot  \\prod_{i=1}^p P[X_i | C]$$.\n",
+    "$$h(\\mathbf{x}) = \\mathit{argmax}_{c \\in {1, 2, \\dots, M}} P(C) \\cdot \\prod_{i=1}^p P(X_i | C)$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "NOTE: We completely ignored the denominator $P[X_1, \\dots, X_p]$ in the maximization. \n",
@@ -82,7 +87,11 @@
     "\n",
     "The final classification rule is then:\n",
     "\n",
-    "$$h(\\mathbf{x}) = \\mathit{argmax}_{c \\in \\{1, 2, \\dots, M\\}} \\log(P[C=c]) +  \\sum_{i=1}^p \\log(P[X_i | C=c])$$.\n"
+    "$$h(\\mathbf{x}) = \\mathit{argmax}_{c \\in {1, 2, \\dots, M}} \\log(P(C=c)) + \\sum_{i=1}^p \\log(P(X_i | C=c))$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2051,7 +2060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
   },
   "toc": {
    "colors": {
