--- a/SVL/November/E03-NaiveBayes-jupyter/Bayes-Learning-Q.ipynb
+++ b/SVL/November/E03-NaiveBayes-jupyter/Bayes-Learning-Q.ipynb
@@ -25,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,8 +66,7 @@
     "\n",
     "Now the calculations are straight-forward. The terms $P[X_i | C]$ can be estimated by calculating the relative frequency of word $i$ per class $c$, resulting in a table of $p \\cdot M$ conditional probabilities. And finally, we can make predictions by calculating:\n",
     "\n",
-    "$$h(\\mathbf{x}) = \\mathit{argmax}_{c \\in \\{1, 2, \\dots, M\\}} P[C] \\cdot  \\prod_{i=1}^p P[X_i | C]$$.\n",
-    "\n",
+    "[REDACTED]\n",
     "\n",
     "NOTE: We completely ignored the denominator $P[X_1, \\dots, X_p]$ in the maximization. \n",
     "\n",
@@ -1882,7 +1882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
   },
   "toc": {
    "colors": {
